--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,49 @@
+body{
+ font-family: 'Times New Roman', Times, serif;   
+}
 img{
     max-width: 50%;
 }
-.grid-container {
+.parent {
     display: grid;
-    grid-template-columns: 1fr 1fr;  
-    grid-gap: 20px;
-}
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 6px;
+    grid-row-gap: 6px;
+  }
+  
+  .parent div{
+    min-height:200px;
+  /*   padding:10px; */
+  }
+  .div1 {
+    grid-area: 1 / 1 / 3 / 4;
+    background-color:#3e4;
+  }
+  .div2 {
+    grid-area: 1 / 4 / 3 / 6;
+      background-color:#9ee;
+  
+  }
+  .div3 {
+    grid-area: 3 / 1 / 4 / 4;
+      background-color:#e8a;
+  
+  }
+  .div4 {
+    grid-area: 3 / 4 / 4 / 6;
+      background-color:#88e;
+  
+  }
+  .div5 {
+    grid-area: 4 / 1 / 5 / 4;
+      background-color:#9ef;
+  
+  }
+  .div6 {
+    grid-area: 4 / 4 / 5 / 6;
+      background-color:#9b1;
+  
+  }
+
+  
