--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,16 @@ body{
  font-family: 'Times New Roman', Times, serif;   
 }
 img{
+    min-width: 50%;
     max-width: 50%;
 }
-h1{
+h1{font-size: 75px;
+}
+h2{font-size: 35px;
+}
+h3{font-size: 30px;
+}
+p{font-size: 20px;
 }
 
 .parent {
@@ -17,36 +24,28 @@ h1{
   
   .parent div{
     min-height:200px;
-  /*   padding:10px; */
+  /*   padding:5px; */
   }
   .div1 {
     grid-area: 1 / 1 / 3 / 4;
-    background-color:#3e4;
   }
   .div2 {
-    grid-area: 1 / 4 / 3 / 6;
-      background-color:#9ee;
-  
+    grid-area: 1 / 4 / 3 / 6;  
   }
   .div3 {
     grid-area: 3 / 1 / 4 / 4;
-      background-color:#e8a;
-  
   }
   .div4 {
     grid-area: 3 / 4 / 4 / 6;
-      background-color:#88e;
+    img{ min-width: 100%;}
   
   }
   .div5 {
     grid-area: 4 / 1 / 5 / 4;
-      background-color:#9ef;
-  
+    img{ min-width: 50%;}
   }
   .div6 {
-    grid-area: 4 / 4 / 5 / 6;
-      background-color:#9b1;
-  
+    img{ min-width: 125%;}
   }
 
   
