--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,9 @@ img{
 h1{font-size: 75px;
 }
 h2{font-size: 35px;
+  font-style: oblique;
 }
-h3{font-size: 30px;
+h3{font-size: 25px;
 }
 p{font-size: 20px;
 }
@@ -28,9 +29,17 @@ p{font-size: 20px;
   }
   .div1 {
     grid-area: 1 / 1 / 3 / 4;
+    background-color: blueviolet;
+    color: white;
   }
   .div2 {
-    grid-area: 1 / 4 / 3 / 6;  
+    grid-area: 1 / 4 / 3 / 6;
+    background-color: blueviolet;
+    color: white;  
+    a{
+      color: powderblue;
+      font-style: italic;
+    }
   }
   .div3 {
     grid-area: 3 / 1 / 4 / 4;
@@ -48,4 +57,7 @@ p{font-size: 20px;
     img{ min-width: 125%;}
   }
 
-  
+  a{
+    color: seagreen;
+    font-style: italic;
+  }
