--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ p{font-size: 20px;
     background-color: blueviolet;
     color: white;  
     a{
-      color: powderblue;
+      color: rgb(190, 255, 212);
       font-style: italic;
     }
   }
