--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+head{
+  display: inline;
+  position: fixed;
+  display: inline;
+  background-color: blueviolet;
+}
+  
 body{
  font-family: 'baskerville', garamond, serif;   
 }
