--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,10 @@ h3{font-size: 25px;
 p{font-size: 20px;
 }
 
+.active {
+  height: 20px;
+}
+
 .parent {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
